--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
    Base styles: opinionated defaults
    ========================================================================== */
 
-   html {
+html {
     color: #222;
     font-size: 1em;
     line-height: 1.4;
@@ -81,7 +81,7 @@ fieldset {
  */
 
 textarea {
-    resize: vertical;
+      resize: vertical;
 }
 
 /* ==========================================================================
@@ -89,10 +89,10 @@ textarea {
    ========================================================================== */
 
 .browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
+      margin: 0.2em 0;
+      background: #ccc;
+      color: #000;
+      padding: 0.2em 0;
 }
 
  /* ==========================================================================
@@ -102,216 +102,209 @@ textarea {
 /* General Styles */
  
 html {
-    font-size: 16px;
+      font-size: 16px;
 }
  
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
-  text-align: left;
- 
+      font-family: 'Open Sans', sans-serif;
+      font-size: 1em;
+      text-align: left;
+      color: #e2e3ed;
 }
 
 ul, 
 ol {
-  list-style-type: none;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
  
 }
  
 a {
-  color: #e2e3ed;
-  text-decoration: none;
+      color: #e2e3ed;
+      text-decoration: none;
 }
  
 h2 {
-  font-family: 'Poppins', sans-serif;
-  font-size: 2.25em;
-  color: #fff;
-  
-}
- 
-h1 {
-  color:#fff;
+      font-family: 'Poppins', sans-serif;
+      font-size: 2.25em;
+      font-weight: 500;
+      margin: 0; 
 }
 
 h3, 
 h4 {
-     font-family: 'Poppins', sans-serif;
-     font-size: 1.875em;
-     color: #FFFFFF;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.875em;
+      font-weight: 500;
+      margin: 20px 0;
 }
  
 p {
-  font-size: 1.125em;
-  line-height: 30px;
-  color: #fff;
-	
+      font-size: .875em;
+      line-height: 23px;
+      	
 }
-  
-address {
-  font-style: normal;
  
+address {
+      font-style: normal;
 }
  
 .contact-wrapper {
-    width: 90%;
-    margin: 50px 0;
+      width: 90%;
+      margin: 50px 0;
 }
 
+
 img { 
-	width: 100%;
+	  width: 100%;
 }
  
 figure {
-        margin: 0;
+      margin: 0;
 }
 
 /*---------base-header----footer---styles--------*/
 
 header, 
 footer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    background-color: #202322;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+      background-color: #202322;
 }
-
 
 header {
-    padding: 15px 0;
-    color: #202322;
+      padding: 15px 0;
 }
 
-
 header .content-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-    margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
+      margin: 0;
   
 }
 
 header figure {
-    width: 60%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+      width: 60%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
 }
 
 .header-divider {
-    background: #3a3a3a; 
-    width: 100%;
-    height: 1px;
-    margin: 10px 0 20px 0;
+      background: #3a3a3a; 
+      width: 100%;
+      height: 1px;
+      margin: 10px 0 20px 0;
 }
 
 header nav {
-  width: 60%;
-  font-size: 1.125em;
-  font-weight: 700;
-  text-transform: uppercase;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-flow: row wrap;
+      width: 60%;
+      font-size: 1.125em;
+      font-weight: 700;
+      text-transform: uppercase;
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      flex-flow: row wrap;
 }
 
-/*header nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-flow: row wrap;
-    width: 60%;*/
-}
 header nav ul {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
 }
 
 header nav ul li {
-  font-size: 1.125em;
+      font-size: 1.125em;
 }
   
 footer {
-    flex-direction: column;   
-    text-align: center;
+      flex-direction: column;   
+      text-align: center;
 }
   
 footer p {
-    margin: 0;
+      margin: 0;
     
 }
   
 footer .content-wrapper {
-    width: 55%;
-    margin: 50px 0;
+      width: 55%;
+      margin: 50px 0;
 }
   
 footer .contact {
-    margin-bottom: 50px;
+      margin-bottom: 50px;
   }
   
 footer .social-icons {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+      display: flex; 
+      justify-content: space-around;
+      align-items: center;
 }
   
 footer .social-icons p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #527158;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;  
+}
+
+footer .social-icons p i {
+      font-size: 1.3125em;
 }
   
 footer .copyright {
-    margin: 20px 0;
+      margin: 20px 0;
 }
 
-
-  
 /* -------------------- Mobile Styles - Homepage -------------------- */
 
 /* Hero Area */
-
+/*
 header figure {
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
+      width: 60%;
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      flex-flow: row wrap;
+}*/
 
 .hero-area {
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    background: url('../img/hero.jpg') center no-repeat #333;
-    background-size: cover;
-    min-height: 500px;
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      background: url('../img/hero.jpg') center no-repeat #333;
+      background-size: cover;
+      background-position: center;
+      min-height: 500px;
 }
-  
+
+.hero-area h1 {
+      font-size: 2.25em;
+}
+
+/* Aside */
   
 aside {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+      background-color: #527158;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
 }
 
 aside .form {
-      margin-top: 30px;
-  
-    
-}
-     
-aside .content-wrapper {
-      background-color: #527158;
-      
+      margin-top: 30px; 
 }
 
 input[type=text] {
@@ -338,60 +331,57 @@ input[type=button] {
  /* Features */
   
 .features {
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    background: url('../img/raw.jpg') center no-repeat #333;
-    background-size: cover;
-
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      background: url('../img/raw.jpg') center no-repeat #333;
+      background-size: cover;
 }
   
 .features h2 {
-    margin-bottom: 60px;
+      margin-bottom: 60px;
 }
   
 .features article {
-    width: 55%;
-    margin: 30px 0;
+      width: 55%;
+      margin: 30px 0;
     
 }
   
 .features .features-items {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
 }
   
 .features p {
-    margin: 0;
-    text-align: center;
+      margin: 0;
+      text-align: center;
 }
 
 .features i {
-    font-size: 3.75em;
-          margin-bottom: 40px;
+      font-size: 3.75em;
+      margin-bottom: 40px;
 }
   
  /* Reviews */
 
  .reviews {
-    display: flex;
-    justify-content: center;
-    flex-flow: row wrap;
-    background-color: #2A423A;
-
+      display: flex;
+      justify-content: center;
+      flex-flow: row wrap;
+      background-color: #2A423A;
 }
   
 .reviews h2 {
-    margin-bottom: 40px;
-    line-height: 1;
-  
+      margin-bottom: 40px;
+      line-height: 1;  
 }
   
 .reviews h3 {
-    width: 55%;
-    margin: 20px 0; 
+      width: 55%;
+      margin: 20px 0; 
 }
 
 /* ==========================================================================
@@ -405,7 +395,23 @@ input[type=button] {
       align-items: center;
       flex-flow: row wrap;
 }
-    
+
+.map figure {
+    width: 100%;
+    height: 0; 
+    padding-bottom: 80%; 
+    overflow: hidden;
+    position: relative;
+  }
+  
+  .map iframe {
+    width: 100%;
+    height: 100%;
+    position: absolute; 
+    top: 0; 
+    left: 0; 
+  }
+
 .contact-section {
       background-color: #2a423a;
       display: flex;
@@ -418,73 +424,38 @@ input[type=button] {
       margin: 0;
 }
     
-/*
-.mission {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-  
-.contact-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
-  }
-  
-.contact-content p {
-    margin: 0;
-  }
-
-  .map figure {
-    width: 100%;
-    height: 0; 
-    padding-bottom: 125%; 
-    overflow: hidden;
-    position: relative;
-}
- 
-.map iframe {
-    width: 100%;
-    height: 100%;
-    position: absolute; 
-    top: 0; 
-    left: 0; 
-}
-
 /* ==========================================================================
                               FAQ Page
 ========================================================================== */
 
 .faq {
-    background-color: #527158;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+      background-color: #527158;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
 }
   
 .faq .content-wrapper {
-    margin: 50px 0 0 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: row wrap;
+      margin: 50px 0 0 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: row wrap;
 }
   
 .faq h2 {
-    margin-bottom: 40px;
-    line-height: 1;
+      margin-bottom: 40px;
+      line-height: 1;
 }
   
 .faq-content {
-    margin-bottom: 50px;
+      margin-bottom: 50px;
 }
   
 .faq-content h4 {
-    line-height: 1.333;
-    font-weight: 700;
+      line-height: 1.333;
+      font-weight: 700;
 }
 
  /* ==========================================================================
@@ -575,96 +546,117 @@ input[type=button] {
    ========================================================================== */
 
 @media only screen and (min-width:768px) {
-  
-  
+   
 /* General styles */
 
 .content-wrapper {
-   max-width: 640px;
-   margin: 100px 0;
+      max-width: 640px;
+      margin: 100px 0;
 }
+
+h2 {
+      font-size: 2.25em;
+      line-height: 1.333;
+  }
+
+  h3 {
+      font-size: 1.5em;
+      line-height: 1.25;
+  }
   
 /* Header */
+
 header {
-   justify-content: space-around;
+      justify-content: space-around;
 }
   
 header .content-wrapper {
-   width: 100%;
-   justify-content: space-between;
+      width: 100%;
+      justify-content: space-between;
 }
+
+header figure {
+      width: 30%;
+  }
   
 header nav {
-   width: 20%;
+      width: 20%;
 }
   
 header nav ul {
-   justify-content: space-between;
+      justify-content: space-between;
 }
   
 .header-divider {
-   display: none;
+      display: none;
 }
 
 /* Hero Area */
   
 .hero-area h1 {
-   font-size: 3em;
-   line-height: 1;
-   margin: 0;
+      font-size: 3em;
+      line-height: 1;
+      margin: 0;
 }
 
 /* Aside */
 
-aside {
-   background-color: #527158;
-
-}
-
 aside .content-wrapper {
-   margin: 50px 0;
-   display: flex;
-   justify-content: space-between;
-   flex-flow: row wrap;
-     
+      margin: 50px 0;
+      display: flex;
+      justify-content: space-between;
+      flex-flow: row wrap;   
 }
   
 aside .content-wrapper .form-description,
 aside .content-wrapper .form {
-    width: 35%;
-    margin: 0;
+      width: 35%;
+      margin: 0;
       
 }
   
 /* Features */
 
+.features h2 {
+      margin: 0 20px 20px 0;
+}
+
 .features article {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column wrap;
-    flex-basis: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-flow: column wrap;
+      flex-basis: 50%;
 }
     
 .features .features-item-description {
-    width: 50%;
+      width: 50%;      
+}
+
+.features i {
+      margin-bottom: 30px;
 }
   
 /* Reviews */
 
 .reviews article {
-    display: flex;
-    justify-content: space-between;
+      display: flex;
+      justify-content: space-between;
 }
 
 .reviews h2 {
-    width: 90%;
+      width: 90%;
 }
   
 .reviews article figure,
 .reviews article div {
-     width: 49%;
+      width: 49%;
 }
+
+.reviews h3 {
+      width: 75%;
+      margin: 0;
+  }
   
 /* Footer */
 
@@ -673,15 +665,30 @@ footer .content-wrapper {
       margin: 100px 0;
 }
   
-.footer-content {
+footer .footer-content {
       display: flex;
       justify-content: space-between;
       align-items: center;
+      flex-direction: row;
 }
   
 footer .contact {
       margin-bottom: 0;
 }
+
+footer h4 {
+      font-size: 1.5em;
+      margin-bottom: 40px;
+  }
+
+  footer p {
+      line-height: 1.285;
+  }
+
+  footer .social-icons {
+      width: 12.5em;
+      justify-content: space-between;
+  }
   
 footer .copyright {
       width: 100%;
@@ -700,6 +707,10 @@ footer .copyright {
 .mission-content p {
       width: 40%;
 }
+
+.map figure {
+      padding-bottom: 45.5%;
+}
   
 .contact-section .content-wrapper h2 {
       width: 80%;
@@ -714,44 +725,7 @@ footer .copyright {
 .contact-content h4 {
       font-size: 1.5em;
 }
-  
 
- /*   .mission-content {================================================================
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  
-    .mission-content p {
-      width: 40%;
-    }
-  
-    .contact-section .content-wrapper h2 {
-      width: 80%;
-    }
-  
-    .contact-content {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-    }
-
-    .map figure {
-      width: 45%;
-      height: 0; 
-      padding-bottom: 45%; 
-      overflow: hidden;
-      position: relative;
-  }
-
-    .map iframe {
-      width: 100%;
-      height: 100%;
-      position: absolute; 
-      top: 0; 
-      left: 0; 
-  }
- 
   
 /* ==========================================================================
                              FAQ Page
@@ -775,27 +749,8 @@ footer .copyright {
       line-height: 1.125;
 }
   
+}
 
-
-
-   /*  .faq .content-wrapper {================================================
-      justify-content: space-between;
-    }
-  
-    .faq-content {
-      flex-basis: 40%;
-    }
-  
-    .faq h2 {
-      width: 100%;
-    }
-  
-    .faq h4,
-    .faq p {
-        font-size: .875em;
-        line-height: 1.125;
-    }
-  -------------------------------------------------------------------------------
 @media only screen and (min-width: 1200px) {  
 /*Desktop styles here */  
 
@@ -803,20 +758,39 @@ footer .copyright {
       max-width: 960px;
   
 }
+
+h2 {
+      font-size: 2.25em;
+}
+
+  h3,
+  h4 {
+      font-size: 1.875em;
+  }
+
+  p {
+      font-size: 1.125em;
+      line-height: 1.333;
+  }
      
-         /* Hero */
+/* Hero */
 .hero-area h1 {
       width: 70%;
+      font-size: 3.75em;
 }
      
 /* Aside */
 aside .content-wrapper {
-      justify-content:
+      justify-content: space-around;
 }
      
 aside .content-wrapper .form-description,
 aside .content-wrapper .form {
       width: 30%;
+}
+
+.form-description p {
+      font-size: 1.125em;
 }
      
 /* Features */
@@ -830,32 +804,30 @@ aside .content-wrapper .form {
 }
      
 /* Reviews */ 
-.reviews article div {
-      width: 50%;
-}
 
-        
-     
+.reviews article div {
+      width: 42%;
+}
+   
 /* ==========================================================================
                               About Page
 ========================================================================== */
+
+.map figure {
+      padding-bottom: 40%; 
+}
+
 .mission h2,
 .contact-section .content-wrapper h2 {
       width: 100%;
+      font-size: 3em;
 }
      
 .contact-section .content-wrapper h2 {
-      margin-bottom: 100%;
+      margin-bottom: 40%;
 }
 
-.map figure {
-      width: 450%;
-      height: 0; 
-      padding-bottom: 40%; 
-      overflow: hidden;
-      position: relative;
-}
-
+/*
 .map iframe {
       width: 100%;
       height: 100%;
@@ -863,130 +835,28 @@ aside .content-wrapper .form {
       top: 0; 
       left: 0; 
 }
-     
+     */
      
 /* ==========================================================================
                             FAQ Page
 ========================================================================== */
 
-.faq .content-wrapper {
-     justify-content: space-between;
-}
-    
-.faq-content {
-      flex-basis: 40%;
-}
-    
 .faq h2 {
-      width: 100%;
+     width: 100%;
+     font-size: 3em;
+}
+
+.faq-content {
+      flex-basis: 35%;
 }
     
 .faq h4,
 .faq p {
-      font-size: .875em;
-      line-height: 1.125;
-}
-    
- @media only screen and (min-width:1200px) {
-
-      
-.content-wrapper {
-      max-width: 960px;
-}
-      
-h2 {
-      font-size: 2.25em;
-}
-      
-h3,
-h4 {
-      font-size: 1.875em;
-}
-      
-p {
-      font-size: 1.125em;
-      line-height: 1.333;
-}
-
-/* Hero */
-.hero-area h1 {
-      font-size: 3.75em;
-      width: 60%;
-}
-      
-/* Aside */
-aside .content-wrapper {
-      justify-content: space-around;
-}
-      
-aside .content-wrapper .form-description,
-aside .content-wrapper .form {
-      width: 30%;
-}
-      
-.form-description p {
-      font-size: 1.125em;
-}
-      
-/* Features */
-      
-.features h2 {
-      width: 70%;
-}
-      
-.features article {
-      flex-basis: 33%;
-}
-        
-/* Reviews */
-.reviews article div {
-      width: 42%;
-}
- /* ==========================================================================
-                                About Page
-========================================================================== */
-      
-.mission h2,
-.contact-section .content-wrapper h2 {
-      width: 100%;
-      font-size: 3em;
-}
-      
-.contact-section .content-wrapper h2 {
-      margin-bottom: 40px;
-}
-      
-.contact-content h4 {
-      font-size: 1.875em;
-}
-      
-/* ==========================================================================
-                                 FAQ Page
-========================================================================== */
-        
-.faq h2 {
-      width: 100%;
-      font-size: 3em;
-}
-      
-        
-.faq-content {
-      flex-basis: 35%;
-        }
-          
-.faq h4,.faq p {
       font-size: 1.125em;
       line-height: 1;
 }
-      
-
-@media print,
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 1.25dppx),
-       (min-resolution: 120dpi) {
-    /* Style adjustments for high resolution devices */
+   
 }
-
  
 /* ==========================================================================
    Print styles.
